01-namespaces/base/app/contoso-app-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: contoso
    app.kubernetes.io/component: contoso
    app.kubernetes.io/instance: contoso
    app.kubernetes.io/part-of: contoso
  name: contoso
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: contoso
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
